// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions pushPage creates action 1`] = `
Array [
  Object {
    "payload": Object {
      "id": 5,
    },
    "type": "PUSH_PAGE",
  },
]
`;

exports[`actions pushPage triggers getChildren 1`] = `
Array [
  Object {
    "payload": Object {
      "id": 5,
    },
    "type": "PUSH_PAGE",
  },
  Object {
    "payload": Object {
      "id": 5,
    },
    "type": "GET_CHILDREN_START",
  },
]
`;

exports[`actions toggleExplorer close 1`] = `
Array [
  Object {
    "payload": undefined,
    "type": "CLOSE_EXPLORER",
  },
]
`;

exports[`actions toggleExplorer open 1`] = `
Array [
  Object {
    "payload": Object {
      "id": 5,
    },
    "type": "OPEN_EXPLORER",
  },
  Object {
    "payload": 5,
    "type": "GET_PAGE_START",
  },
]
`;

exports[`actions toggleExplorer open at root 1`] = `
Array [
  Object {
    "payload": Object {
      "id": 1,
    },
    "type": "OPEN_EXPLORER",
  },
  Object {
    "payload": Object {
      "id": 1,
    },
    "type": "GET_CHILDREN_START",
  },
]
`;

exports[`actions toggleExplorer open first time 1`] = `
Array [
  Object {
    "payload": Object {
      "id": 5,
    },
    "type": "OPEN_EXPLORER",
  },
  Object {
    "payload": Object {
      "id": 5,
    },
    "type": "GET_CHILDREN_START",
  },
  Object {
    "payload": 5,
    "type": "GET_PAGE_START",
  },
]
`;
